2025-07-18  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.79 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* test/ebuild-mode-tests.el (ebuild-mode-test-run-command-foo):
	New test.

2025-07-09  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-list)
	(ebuild-mode-arch-stable-list, ebuild-mode-licenses)
	(ebuild-mode-eclasses, ebuild-mode-use-flags)
	(ebuild-mode-get-builddir, ebuild-mode-find-workdir)
	(ebuild-mode-find-image-dir, ebuild-mode-find-s)
	(ebuild-mode-find-build-log): Use expand-file-name instead of
	concat because it is slightly more robust, considering that the
	directories may be custom-defined by the user.

2025-02-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.78 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2025-01-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-find-s): Restrict scope of the inner
	let-binding.

	* ebuild-mode.el (ebuild-commands-list): Remove "depend" command.

2025-01-08  Ulrich Müller  <ulm@gentoo.org>

	* test/ebuild-mode-tests.el (ebuild-mode-test-get-builddir):
	* test/devbook-mode-tests.el (devbook-mode-test-set-schema):
	Replace anonymous no-op functions with stringp.

	* test/ebuild-mode-tests.el (ebuild-mode-test-find-s): New test.

2024-12-26  Ulrich Müller  <ulm@gentoo.org>

	* Makefile (%.info): Call makeinfo with --no-split option.

	* ebuild-mode.texi: Drop handwritten node pointers.

	* ebuild-mode.el (ebuild-mode-unescape-string): Support \x.
	(ebuild-mode-find-s): Use unibyte buffer for the environment file.
	* test/ebuild-mode-tests.el (ebuild-mode-test-unescape-string):
	Update.

2024-12-21  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.77 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2024-12-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-list)
	(ebuild-mode-arch-stable-list, ebuild-mode-use-flags):