@@ -1,3 +1,8 @@
+2025-12-31  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
+	Regenerated.
+
 2025-07-18  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.79 released.
